# image-processing-algorithms

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
python/: main.py  my_stitch.py  stitch_openCV.py
samples/: adaptive_filters.cpp  clahe_test.cpp  nlm_test.cpp  slic_test.cpp  test.cpp
src/: adaptive_filters.cpp  adaptive_filters.hpp  basic_filters.cpp  basic_filters.hpp  clahe.cpp  clahe.hpp  hist_eq.cpp  hist_eq.hpp  integral_img.hpp  main.cpp  nlm.cpp  nlm.hpp  slic.cpp  slic.hpp
